--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -2349,6 +2349,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
         /* Removes border around search box */
         .sbdd_b,
+        .sbsb_a,
 
         ytd-expandable-metadata-renderer[round-container],
 
@@ -2383,25 +2384,19 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
         /* video preview while hovering */
         #video-preview-container.ytd-video-preview,
-        .ytp-autonav-endscreen-upnext-thumbnail {
-            border-radius: borderRadius i;
-        }
-
+        .ytp-autonav-endscreen-upnext-thumbnail,
+ 
         #dismissed.ytd-rich-grid-media,
-        .ytp-tooltip.ytp-rounded-tooltip.ytp-text-detail.ytp-preview {
+        .ytp-tooltip.ytp-rounded-tooltip.ytp-text-detail.ytp-preview,
+        #endpoint.yt-simple-endpoint.ytd-guide-entry-renderer:hover, #endpoint.yt-simple-endpoint.ytd-guide-entry-renderer:focus,
+        
+        yt-interaction.ytd-guide-entry-renderer,
+        ytd-guide-entry-renderer {
             border-radius: borderRadius i;
         }
 
         tp-yt-paper-item.ytd-guide-entry-renderer {
             --paper-item-focused-before-border-radius: borderRadius i;
-        }
-        
-        #endpoint.yt-simple-endpoint.ytd-guide-entry-renderer:hover, #endpoint.yt-simple-endpoint.ytd-guide-entry-renderer:focus {
-            border-radius: borderRadius i;
-        }
-        yt-interaction.ytd-guide-entry-renderer,
-        ytd-guide-entry-renderer {
-            border-radius: borderRadius i;
         }
         
         ytd-expandable-metadata-renderer[round-container]:not([is-expanded]) {
