--- a/userstyles/AdashimaaTube.user.css
+++ b/userstyles/AdashimaaTube.user.css
@@ -11,7 +11,7 @@
 @preprocessor   stylus
 
 
-@var checkbox playlistOverlay          "🥶 Old Playlsits Overlay (Beta)" 1
+@var checkbox playlistOverlay          "🥶 Old Playlist Overlay (Beta)" 1
 @var select customOldLayout            "⚒️ Old Layout" ["Enabled", "Disabled"]
 @var range borderRadius                "  ⚙️ Border Radius" [0, 0, 40, 1, 'px']
 @var range buttonRadius                "  ⚙️ Buttons Radius" [2, 0, 18, 1, 'px']
@@ -1378,7 +1378,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
             #contents > ytd-compact-video-renderer,
             #items > ytd-reel-item-renderer,
             #related > ytd-watch-next-secondary-results-renderer > #items > ytd-compact-video-renderer,
-            #items > ytd-grid-video-renderer {
+            #items > ytd-grid-video-renderer,
+            #contents > ytd-grid-video-renderer {
                 &:has(#dismissible > ytd-thumbnail > a#thumbnail[href^="/shorts/"]) {
                     display: none;
                 }
