--- a/userstyles/AdashimaaTube.user.css
+++ b/userstyles/AdashimaaTube.user.css
@@ -1375,13 +1375,12 @@ Support me: https://ko-fi.com/sapondanaisriwan
             /* These rules won't be applied in browsers that don't support :has() */
             /* https://www.youtube.com/results?search_query=shorts */
             ytd-video-renderer[is-search],
-            #contents > ytd-compact-video-renderer,
-            #items > ytd-reel-item-renderer,
-            #related > ytd-watch-next-secondary-results-renderer > #items > ytd-compact-video-renderer,
-            #items > ytd-grid-video-renderer,
-            #contents > ytd-rich-item-renderer {
+            ytd-compact-video-renderer,
+            ytd-reel-item-renderer,
+            ytd-grid-video-renderer,
+            ytd-rich-item-renderer {
                 &:has(a[href^="/shorts/"]) {
-                    display: none;
+                    display: none i;
                 }
             }
 
@@ -1412,7 +1411,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
             /* https://www.youtube.com/hashtag/shorts */
             [page-subtype="hashtag-landing-page"] {
-                > #primary > ytd-rich-grid-renderer #contents > ytd-rich-grid-row > #contents > ytd-rich-item-renderer:has(#content > ytd-rich-grid-media > #dismissible > ytd-thumbnail > a#thumbnail[href^="/shorts/"]) {
+                ytd-rich-item-renderer:has(#content > ytd-rich-grid-media > #dismissible > ytd-thumbnail > a#thumbnail[href^="/shorts/"]) {
                     display: none;
                 }
 
@@ -1438,8 +1437,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
             }
 
             /* Trending */
-            [page-subtype="trending"] #grid-container.ytd-expanded-shelf-contents-renderer > ytd-video-renderer:has(#dismissible.ytd-video-renderer > ytd-thumbnail a#thumbnail[href^="/shorts/"]) {
-                display: none;
+            [page-subtype="trending"] ytd-video-renderer:has(#dismissible.ytd-video-renderer > ytd-thumbnail a#thumbnail[href^="/shorts/"]) {
+                display: none i;
             }
         }
 
